--- a/32664_Tool/UI_Windows.ui
+++ b/32664_Tool/UI_Windows.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MAX32664-Tool Version 0.1</string>
+   <string>MAX32664-Tool v0.1</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_7">
