--- a/32664_Tool/UI_Windows.ui
+++ b/32664_Tool/UI_Windows.ui
@@ -167,7 +167,7 @@
              <item>
               <widget class="QPushButton" name="SendButton">
                <property name="text">
-                <string>发送文件</string>
+                <string>下载文件</string>
                </property>
               </widget>
              </item>
@@ -195,7 +195,7 @@
      <x>0</x>
      <y>0</y>
      <width>833</width>
-     <height>23</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
